# cloudscale-cloud-controller-manager

./: .gitignore  .golangci.yml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml  tool.mod  tool.sum
.github/: dependabot.yaml
.github/workflows/: ccm-integration-tests.yml  golangci-lint.yml  integration-tests.yml  testing.yml  tests.yml
cloudscale/: cloud.go  loadbalancers.go
cmd/cloudscale-cloud-controller-manager/: main.go
cmd/http-echo/: go.mod  go.sum  main.go
deploy/: latest.yml
deploy/kubernetes/releases/: latest.yml
examples/: dns-dual-protocol.yaml  external-traffic-policy-local.yml  gateway-api.yaml  ingress.yaml  nginx-hello-nodeselector.yml  nginx-hello.yml  proxy-v2-protocol.yml  udp.yaml
helpers/: cleanup  image-from-ref  release  run-in-test-cluster  supported-releases  test-matrix
install/manifests/: latest.yml
pkg/cloudscale/: cloud.go  cloud_test.go
pkg/cloudscale_ccm/: cloud.go  cloud_test.go  instances.go  instances_test.go  lb_mapper.go  lb_mapper_test.go  limiter.go  limiter_test.go  loadbalancer.go  loadbalancer_test.go  provider_id.go  provider_id_test.go  reconcile.go  reconcile_test.go  server_mapper.go  server_mapper_test.go  servers.go  servers_test.go  service_info.go  service_info_test.go
pkg/internal/actions/: actions.go  actions_test.go  control.go
pkg/internal/compare/: compare.go  compare_test.go
pkg/internal/integration/: main_test.go  node_test.go  service_test.go
pkg/internal/kubeutil/: annotate.go
pkg/internal/limiter/: limiter.go  limiter_test.go
pkg/internal/testkit/: api.go  (+4 more)
