[tool.poetry]
name = "ccm"
version = "0.1.0"
description = "Dependencies for helper scripts"
authors = ["Denis Krienbühl <denis.krienbuehl@cloudscale.ch>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pygithub = "^2.1.1"
requests = "^2.31.0"
semver = "^3.0.2"
pydantic = "^2.5.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
python-lsp-server = {extras = ["flake8"], version = "^1.9.0"}
pylsp-mypy = "^0.6.8"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
